# cpuinfo-js

./: .gitignore  README.md  index.d.ts  index.js  install.js  package-lock.json  package.json  test.js
.github/workflows/: node.yml
src/: CMakeLists.txt  asyncWorker.cpp  asyncWorker.hpp  cpuinfo_js.cpp  main.cpp
src/cpuinfo/: cpuinfo.c  cpuinfo.h
